Fix "Fetch" boldness on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 strong {
-	font-weight: 600;
+	font-weight: 800;
 }
 
 .content {
